# Polybot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
polymarket_bot/: cli.py  config.py
polymarket_bot/analytics/: paper_analysis.py
polymarket_bot/api/: app.py
polymarket_bot/api/static/: index.html
polymarket_bot/clients/: clob_client.py  data_client.py  gamma_client.py
polymarket_bot/config/: wallets.yaml
polymarket_bot/db/: models.py  session.py
polymarket_bot/engine/: copy_engine.py  order_executor.py  paper_portfolio.py  paper_runner.py  wallet_stats.py
polymarket_bot/watcher/: deduplication.py  wallet_watcher.py
tests/: test_live_paper_copy.py
tests/unit/: test_config.py  test_copy_engine.py
